After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 567811 - Missing keyboard accelerators in Time settings window
Missing keyboard accelerators in Time settings window
Status: RESOLVED FIXED
Product: gnome-panel
Classification: Other
Component: clock
git master
Other Linux
: Normal normal
: ---
Assigned To: Panel Maintainers
Panel Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-01-15 00:40 UTC by Gabor Kelemen
Modified: 2009-08-11 19:21 UTC
See Also:
GNOME target: ---
GNOME version: 2.25/2.26


Attachments
Simple patch to add accelerators and window title (4.25 KB, patch)
2009-01-15 00:41 UTC, Gabor Kelemen
needs-work Details | Review
Fix accelerators, now a tested version (6.67 KB, patch)
2009-01-20 20:48 UTC, Gabor Kelemen
committed Details | Review

Description Gabor Kelemen 2009-01-15 00:40:35 UTC
The location selector and the Time Settings window have several labels without keyboard accelerator. Also the location selector window lacks a title, which is ugly. Attaching patch.
Comment 1 Gabor Kelemen 2009-01-15 00:41:24 UTC
Created attachment 126474 [details] [review]
Simple patch to add accelerators and window title
Comment 2 Vincent Untz 2009-01-20 13:43:41 UTC
The keyboard accelerators don't work with this patch.
Comment 3 Gabor Kelemen 2009-01-20 20:48:20 UTC
Created attachment 126865 [details] [review]
Fix accelerators, now a tested version

Ok, here is an updated version. I'm not sure this is the simplest, but works.
Comment 4 André Klapper 2009-05-14 11:13:08 UTC
Hmm, not branched yet. grumble grumble.
Comment 5 Vincent Untz 2009-08-11 19:21:39 UTC
Finally committed :-)