[clock] Add missing mnemonics and window title

http://bugzilla.gnome.org/show_bug.cgi?id=567811